<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Celik Anahtarı</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search Steels</string>
    <string name="action_search2">Search Standards</string>
    <string name="hint_search">Search Steels by Name</string>
    <string name="hint_search2">Search Standard</string>

    <string name="compo_min">Minimum</string>
    <string name="compo_max">Maximum</string>
    <string name="compo_value">Value</string>
    <string name="compo_tolerance">Tolerance ±</string>
    <string name="compo_element">Element</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="compo_add">Add Element</string>

    <string name="property">Property</string>
    <string name="state">State</string>
    <string name="value">Value</string>
    <string name="dim">Dimension</string>
    <string name="dim_unit">mm</string>
    <string name="temp">Temperature</string>
    <string name="temp_unit">°C</string>
    <string name="min">- min -</string>
    <string name="max">+ max +</string>
    <string name="property_add">Add Property</string>

    <string name="property_remove">remove</string>
    <string name="property_search">Search</string>

    <string-array name="states">
        <item></item>
        <item>untreated</item>40
        <item>annealed</item>4
        <item>hardened/tempered/quenched</item>41
        <item>tempered</item>2
        <item>case hardened</item>33
        <item>cold formed</item>9
    </string-array>

    <string-array name="elements">
        <item>C</item>
        <item>Si</item>
        <item>Mn</item>
        <item>P</item>
        <item>S</item>
        <item>Ag</item>
        <item>Al</item>
        <item>As</item>
        <item>B</item>
        <item>Ba</item>
        <item>Be</item>
        <item>Bi</item>
        <item>Ca</item>
        <item>Ce</item>
        <item>Co</item>
        <item>Cr</item>
        <item>Cu</item>
        <item>Fe</item>
        <item>H</item>
        <item>Hf</item>
        <item>La</item>
        <item>Mg</item>
        <item>Mo</item>
        <item>N</item>
        <item>Nb</item>
        <item>Ni</item>
        <item>O</item>
        <item>Pb</item>
        <item>Pd</item>
        <item>Re</item>
        <item>Sb</item>
        <item>Se</item>
        <item>Sn</item>
        <item>Ta</item>
        <item>Te</item>
        <item>Ti</item>
        <item>V</item>
        <item>W</item>
        <item>Y</item>
        <item>Zn</item>
        <item>Zr</item>
        <item>Cb</item>
        <item>Nd</item>
    </string-array>
</resources>
