<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="fill_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/property"
                android:layout_column="0" />

            <Spinner
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/property"
                android:layout_column="1"
                android:layout_span="3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:layout_column="0" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:layout_column="1"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/value_min"
                android:layout_column="2" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:id="@+id/valuemin_unit" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:layout_column="0" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:layout_column="1"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/value_max"
                android:layout_column="2" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:id="@+id/valuemax_unit" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dim"
                android:layout_column="0" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:layout_column="1"
                android:id="@+id/min"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/dim_min"
                android:layout_column="2" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/dim_unit" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dim"
                android:layout_column="0" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:layout_column="1"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/dim_max"
                android:layout_column="2" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/dim_unit" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:layout_column="0" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:layout_column="1"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/temp_min"
                android:layout_column="2" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/temp_unit" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:layout_column="0" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:layout_column="1"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                android:id="@+id/temp_max"
                android:layout_column="2" />

            <TextView
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/temp_unit" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:layout_column="0" />

            <Spinner
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/state"
                android:layout_column="1"
                android:layout_span="3" />
        </TableRow>

    </TableLayout>


</ScrollView>